# PA_Client

./: CMakeLists.txt
frameworks/cocos2d-x/cocos/: CMakeLists.txt
frameworks/cocos2d-x/cocos/renderer/: CCTrianglesCommand.cpp
frameworks/runtime-src/Classes/: AppDelegate.cpp
frameworks/runtime-src/Classes/lua-bindings/: lua_pomelo_auto.cpp
frameworks/runtime-src/ios-build/: CMakeCache.txt  cmake_install.cmake
frameworks/runtime-src/ios-build/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelWithDebInfo
frameworks/runtime-src/ios-build/PA_Client.xcodeproj/: project.pbxproj
frameworks/runtime-src/mac-build/: CMakeCache.txt  cmake_install.cmake
frameworks/runtime-src/mac-build/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeDebug  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel
frameworks/runtime-src/proj.android/: gradle.properties
frameworks/runtime-src/proj.android/app/: build.gradle
frameworks/runtime-src/proj.ios_mac/ios/: Info.plist
res/anims/battle/aim_fort_enemy/: aim_fort_enemy.ExportJson  aim_fort_enemy0.plist
res/anims/battle/aim_fort_player/: aim_fort_player.ExportJson  aim_fort_player0.plist
res/anims/battle/aim_npc/: aim_npc.ExportJson  npc_point1.plist
res/anims/battle/aim_ship_enemy/: aim_ship_enemy.ExportJson  aim_ship_enemy0.plist
res/anims/battle/aim_ship_player/: aim_ship_player.ExportJson  aim_ship_player0.plist
res/anims/battle/begin_ship/: begin_ship.ExportJson  begin_ship0.plist  begin_ship1.plist  begin_ship2.plist  shuoming.txt
res/anims/battle/begin_vs1/: begin_vs1.ExportJson  begin_vs10.plist
res/anims/battle/begin_vs2/: begin_vs2.ExportJson  begin_vs20.plist
res/anims/battle/begin_vs3/: begin_vs3.ExportJson  (+1 more)
res/ccbi/allianceView/: CCBAlianceAppleCell.ccbi  CCBAlianceApplyCell.ccbi  CCBAllianceApply.ccbi  CCBAllianceApplyCell.ccbi  CCBAllianceCreate.ccbi  CCBAllianceScrollView.ccbi  CCBAllianceView.ccbi  CCBLeagueBase.ccbi  CCBLeagueUpgrade.ccbi  CCBMailCell.ccbi
res/ccbi/battle/: CCBBattle.ccbi  CCBBottom.ccbi  CCBEscortBattleLose.ccbi  CCBEscortBattleWin.ccbi  CCBFortState.ccbi  CCBShowDraw.ccbi  CCBShowLose.ccbi  CCBShowWin.ccbi  CCBTop.ccbi
res/ccbi/chatView/: CCBChatView.ccbi
res/ccbi/commonCCB/: CCBCommonGetPath.ccbi  CCBExchangeCoin.ccbi  CCBExchangeDiamond.ccbi  CCBMessageBox.ccbi  CCBReceiveItemCell.ccbi  CCBReceiveWindowPopup.ccbi  CCBTitlePanel.ccbi
res/ccbi/debugView/: CCBDebugButton.ccbi  debugView.ccbi
res/ccbi/decomposeView/: CCBDecomposeView.ccbi
res/ccbi/domainBattleView/: CCBDescripProp.ccbi  CCBDomainBattleView.ccbi  CCBRewardProp.ccbi
res/ccbi/escortView/: CCBEscortLootBattle.ccbi  CCBEscortLootLog.ccbi  CCBEscortMerchantShipView.ccbi  CCBEscortResult.ccbi  CCBEscortView.ccbi  CCBLootSearchView.ccbi
res/ccbi/exploreView/: CCBPlanetExplore.ccbi
res/ccbi/friendView/: CCBApplicationListCell.ccbi  CCBChatDialogbox.ccbi  CCBChatPopup.ccbi  CCBCommendListCell.ccbi  CCBFriendListCell.ccbi  CCBFriendView.ccbi  CCBPresentListCell.ccbi  CCBRecommendListCell.ccbi
res/ccbi/helpView/: CCBHelpView.ccbi  CCBHelpViewCell.ccbi
res/ccbi/leagueActivity/: CCBCheckChairman.ccbi  CCBCheckMember.ccbi  CCBCheckSubChairman.ccbi  CCBLeagueActivity.ccbi  CCBLeagueApplyList.ccbi  CCBLeagueApplyListCell.ccbi  CCBLeagueDynamic.ccbi  CCBLeagueDynamicFightCell.ccbi  CCBLeagueDynamicMemberCell.ccbi  CCBLeagueInfoList.ccbi  CCBLeagueInfoListCell.ccbi  CCBLeagueList.ccbi  CCBLeagueListCell.ccbi  CCBLeagueMain.ccbi  CCBMemberCheck.ccbi  CCBMsgBox.ccbi
res/ccbi/leagueFight/: CCBFightRecordList.ccbi  CCBFightRecordListCell.ccbi  CCBLeagueFight.ccbi  CCBRewardProp.ccbi  CCBRewardPropCell.ccbi
res/ccbi/leagueView/: CCBBadgesGetPath.ccbi  CCBChangeBadge.ccbi  CCBChangeBadgeScroll.ccbi  CCBLeagueApply.ccbi  CCBLeagueApplyCell.ccbi  CCBLeagueBase.ccbi  CCBLeagueBuild.ccbi  CCBLeagueCreate.ccbi  CCBLeagueDonate.ccbi  CCBLeagueExchange.ccbi  CCBLeagueExchangeCoin.ccbi  CCBLeagueFinance.ccbi  CCBLeagueInfo.ccbi  CCBLeagueResearch.ccbi  CCBLeagueScrollView.ccbi  CCBLeagueTraining.ccbi  CCBLeagueUpgrade.ccbi  CCBLeagueView.ccbi
res/ccbi/loginView/: CCBDemoBattlePreView.ccbi  CCBDemoBattlePreView.csb  CCBLoginView.ccbi  CCBServerView.ccbi  DescripProp.ccbi  testScrow.ccbi
res/ccbi/lotteryView/: CCBLotteryView.ccbi  CCBRateView.ccbi
res/ccbi/mailView/: CCBMailCell.ccbi  CCBMailView.ccbi
res/ccbi/mainView/: CCBBuffCell.ccbi  CCBChangeName.ccbi  CCBChannel.ccbi  CCBMainView.ccbi  CCBShowBuff.ccbi
res/ccbi/packageView/: CCBPackageUpgrade.ccbi  CCBPackageView.ccbi
res/ccbi/prizeView/: CCBPrizeView.ccbi
res/ccbi/produceView/: CCBProduceMainView.ccbi  CCBProduceMainViewCell.ccbi  CCBProduceSpeedUp.ccbi  CCBProduceView1.ccbi  CCBProduceView1Cell.ccbi  CCBProduceView2.ccbi  CCBProductCell.ccbi
res/ccbi/rankView/: CCBCheckAward.ccbi  CCBRankAward.ccbi
res/ccbi/revengeView/: CCBRevengeRequestPopup.ccbi  CCBRevengeView.ccbi  CCBRevengeViewCell.ccbi  CCBWaittingRevengePopup.ccbi
res/ccbi/searchView/: CCBSearchView.ccbi
res/ccbi/setView/: CCBSetView.ccbi
res/ccbi/shipView/: CCBCornerMark.ccbi  CCBFortEquipView.ccbi  CCBFortLevel.ccbi  CCBFortMainCell.ccbi  CCBFortQuality.ccbi  CCBFortSkill.ccbi  CCBFortView.ccbi  CCBPopupProperty.ccbi  CCBShipMainView.ccbi  CCBShipMainView_1.ccbi
res/ccbi/shopView/: CCBAmountControl.ccbi  CCBShopItemCell.ccbi  CCBShopView.ccbi
res/ccbi/taskView/: CCBTaskView.ccbi  CCBTaskViewCell.ccbi
res/data/: arms.json  boss_data.json  combat.json  libcode.json  ship_list.json  skill_data.json  warship.json
res/font/: damage.fnt  damage_ex.fnt  energy.fnt  fight_num.fnt  level_num.fnt  number_green.fnt  number_red.fnt  produce_time.fnt  rank_down.fnt  rank_up.fnt  recovery.fnt  skill.fnt  time_num.fnt
res/resources/font/: ui_font.fnt
src/: config.lua
src/cocos/: init.lua
src/cocos/cocos2d/: DeprecatedCocos2dClass.lua
src/cocos/framework/: init.lua
(+1077 files in other folders)
